--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,9 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 LandLystAsp.net/.vs/LandLystAsp.net/v16/.suo
+LandLystAsp.net/.vs/LandLystAsp.net/v16/.suo
+*.dll
+*.pdb
+*.cache
+LandLystAsp.net/LandLyst/obj/Debug/LandLyst.pdb
+*.cache
