--- a/LandLystAsp.net/LandLyst/LandLyst.csproj
+++ b/LandLystAsp.net/LandLyst/LandLyst.csproj
@@ -119,11 +119,13 @@
     <Content Include="Content\HeadsiteStyle.css" />
     <Content Include="Content\Image\HotelRoom.png" />
     <Content Include="Content\Image\Villa-20-bedroom-2.jpg" />
+    <Content Include="Content\OrderStyle.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\style.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Order\Default.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -149,6 +151,7 @@
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Booking\Booking.Master" />
     <Content Include="HeadSite.Master" />
+    <Content Include="Order\OrderSite.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -301,6 +304,20 @@
     </Compile>
     <Compile Include="HeadSite.Master.designer.cs">
       <DependentUpon>HeadSite.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Order\OrderSite.Master.cs">
+      <DependentUpon>OrderSite.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Order\OrderSite.Master.designer.cs">
+      <DependentUpon>OrderSite.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Order\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Order\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Mobile.Master.cs">
