--- a/LandLystAsp.net/LandLyst/LandLyst.csproj
+++ b/LandLystAsp.net/LandLyst/LandLyst.csproj
@@ -49,7 +49,7 @@
     <Reference Include="AspNet.ScriptManager.bootstrap, Version=4.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\AspNet.ScriptManager.bootstrap.4.4.1\lib\net45\AspNet.ScriptManager.bootstrap.dll</HintPath>
     </Reference>
-    <Reference Include="LandLystLib, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="LandLystLib, Version=1.8.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\LandLystLib.dll</HintPath>
     </Reference>
@@ -144,7 +144,7 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="Booking\Default.aspx" />
-    <Content Include="Contact.aspx" />
+    <Content Include="Contact\Default.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -154,14 +154,15 @@
     <Content Include="Content\HeadsiteStyle.css" />
     <Content Include="Content\Image\HotelRoom.png" />
     <Content Include="Content\Image\Villa-20-bedroom-2.jpg" />
+    <Content Include="Content\MasterStyle.css" />
     <Content Include="Content\OrderStyle.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\SiteScripts.js" />
     <Content Include="Content\style.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
-    <Content Include="Global.asax" />
     <Content Include="Confirmed.aspx" />
+    <Content Include="Global.asax" />
     <Content Include="Order\Default.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -189,6 +190,7 @@
     <Content Include="Booking\Booking.Master" />
     <Content Include="HeadSite.Master" />
     <Content Include="Order\OrderSite.Master" />
+    <Content Include="MasterSubSite.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -287,8 +289,8 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
-    <Content Include="Test\Default.aspx" />
-    <Content Include="Test\TestStyle.css" />
+    <Content Include="SiteIcon.ico" />
+    <Content Include="Test\test.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -318,12 +320,12 @@
     <Compile Include="Booking\Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Contact.aspx.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
+    <Compile Include="Contact\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Contact.aspx.designer.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
+    <Compile Include="Contact\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -349,6 +351,13 @@
     <Compile Include="Confirmed.aspx.designer.cs">
       <DependentUpon>Confirmed.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MasterSubSite.Master.cs">
+      <DependentUpon>MasterSubSite.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterSubSite.Master.designer.cs">
+      <DependentUpon>MasterSubSite.Master</DependentUpon>
+    </Compile>
     <Compile Include="Order\OrderSite.Master.cs">
       <DependentUpon>OrderSite.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -371,19 +380,12 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
-    <Compile Include="Test\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
+    <Compile Include="Test\test.aspx.cs">
+      <DependentUpon>test.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Test\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Test\Test.Master.cs">
-      <DependentUpon>Test.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Test\Test.Master.designer.cs">
-      <DependentUpon>Test.Master</DependentUpon>
+    <Compile Include="Test\test.aspx.designer.cs">
+      <DependentUpon>test.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
@@ -411,7 +413,6 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Test\Test.Master" />
     <Content Include="Skabalon.docx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
